PatitoParserParser.py
# Generated from D:/Mty/Compis/patito/PatitoParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PatitoParserParser ( Parser ):

    grammarFileName = "PatitoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'programa'", "'nula'", "'inicio'", "'mientras'", 
                     "'si'", "'sino'", "'entero'", "'flotante'", "'escribe'", 
                     "'imprime'", "'fin'", "'vars'", "'haz'", "'('", "')'", 
                     "'{'", "'}'", "','", "';'", "':'", "'+'", "'-'", "'*'", 
                     "'/'", "'='", "'!='", "'=='", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "ID", "CTE_LETRERO", "CTE_ENTERO", "CTE_FLOTANTE", 
                      "PROGRAM", "NULA", "INICIO", "MIENTRAS", "SI", "SINO", 
                      "ENTERO", "FLOTANTE", "ESCRIBE", "IMPRIME", "FIN", 
                      "VARS", "HAZ", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "COMMA", "SEMI", "COLON", "PLUS", "MINUS", "MUL", 
                      "DIV", "EQUAL", "NEQ", "DEQ", "LT", "GT", "WS" ]

    RULE_programa = 0
    RULE_tiene_variables = 1
    RULE_tiene_funciones = 2
    RULE_vars = 3
    RULE_complemento_vars = 4
    RULE_tipo = 5
    RULE_funcs = 6
    RULE_complemento_funcs = 7
    RULE_cuerpo = 8
    RULE_tiene_estatuto = 9
    RULE_estatuto = 10
    RULE_asigna = 11
    RULE_expresion = 12
    RULE_complemento_expresion = 13
    RULE_exp_logicas = 14
    RULE_exp = 15
    RULE_exp_signo = 16
    RULE_termino = 17
    RULE_term_signo = 18
    RULE_factor = 19
    RULE_factor_operaciones = 20
    RULE_tiene_signo = 21
    RULE_tiene_var = 22
    RULE_cte = 23
    RULE_condicion = 24
    RULE_complemento_cond = 25
    RULE_ciclo = 26
    RULE_llamada = 27
    RULE_complemento_llamada = 28
    RULE_tiene_expresion = 29
    RULE_imprime = 30
    RULE_complemento_imprime = 31
    RULE_complemento_imprime_aux = 32

    ruleNames =  [ "programa", "tiene_variables", "tiene_funciones", "vars", 
                   "complemento_vars", "tipo", "funcs", "complemento_funcs", 
                   "cuerpo", "tiene_estatuto", "estatuto", "asigna", "expresion", 
                   "complemento_expresion", "exp_logicas", "exp", "exp_signo", 
                   "termino", "term_signo", "factor", "factor_operaciones", 
                   "tiene_signo", "tiene_var", "cte", "condicion", "complemento_cond", 
                   "ciclo", "llamada", "complemento_llamada", "tiene_expresion", 
                   "imprime", "complemento_imprime", "complemento_imprime_aux" ]

    EOF = Token.EOF
    ID=1
    CTE_LETRERO=2
    CTE_ENTERO=3
    CTE_FLOTANTE=4
    PROGRAM=5
    NULA=6
    INICIO=7
    MIENTRAS=8
    SI=9
    SINO=10
    ENTERO=11
    FLOTANTE=12
    ESCRIBE=13
    IMPRIME=14
    FIN=15
    VARS=16
    HAZ=17
    LPAREN=18
    RPAREN=19
    LBRACE=20
    RBRACE=21
    COMMA=22
    SEMI=23
    COLON=24
    PLUS=25
    MINUS=26
    MUL=27
    DIV=28
    EQUAL=29
    NEQ=30
    DEQ=31
    LT=32
    GT=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    contadorenteroglobal = 1000
    contadorflotanteglobal = 3000

    contadorenterotemporal = 5000
    contadorflotantetemporal = 7500

    contadorenterolocal = 10000
    contadorflotantelocal = 12500

    contadorenteroconstante = 15000
    contadorflotanteconstante = 20000
    contadorletreroconstante = 25000




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def PROGRAM(self):
            return self.getToken(PatitoParserParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(PatitoParserParser.ID, 0)

        def SEMI(self):
            return self.getToken(PatitoParserParser.SEMI, 0)

        def tiene_variables(self):
            return self.getTypedRuleContext(PatitoParserParser.Tiene_variablesContext,0)


        def tiene_funciones(self):
            return self.getTypedRuleContext(PatitoParserParser.Tiene_funcionesContext,0)


        def INICIO(self):
            return self.getToken(PatitoParserParser.INICIO, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(PatitoParserParser.CuerpoContext,0)


        def FIN(self):
            return self.getToken(PatitoParserParser.FIN, 0)

        def getRuleIndex(self):
            return PatitoParserParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = PatitoParserParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(PatitoParserParser.PROGRAM)
            self.state = 67
            localctx._ID = self.match(PatitoParserParser.ID)

            self.nombrefuncion = (None if localctx._ID is None else localctx._ID.text)
            self.funcdir.add_funcion((None if localctx._ID is None else localctx._ID.text),"programa")

            self.state = 69
            self.match(PatitoParserParser.SEMI)
            self.state = 70
            self.tiene_variables()
            self.state = 71
            self.tiene_funciones()
            self.state = 72
            self.match(PatitoParserParser.INICIO)
            self.state = 73
            self.cuerpo()
            self.state = 74
            self.match(PatitoParserParser.FIN)

            self.cuadruplo.add_end_Cuadruplo()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tiene_variablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_(self):
            return self.getTypedRuleContext(PatitoParserParser.VarsContext,0)


        def getRuleIndex(self):
            return PatitoParserParser.RULE_tiene_variables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTiene_variables" ):
                listener.enterTiene_variables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTiene_variables" ):
                listener.exitTiene_variables(self)




    def tiene_variables(self):

        localctx = PatitoParserParser.Tiene_variablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_tiene_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 77
                self.vars_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tiene_funcionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParserParser.FuncsContext)
            else:
                return self.getTypedRuleContext(PatitoParserParser.FuncsContext,i)


        def getRuleIndex(self):
            return PatitoParserParser.RULE_tiene_funciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTiene_funciones" ):
                listener.enterTiene_funciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTiene_funciones" ):
                listener.exitTiene_funciones(self)




    def tiene_funciones(self):

        localctx = PatitoParserParser.Tiene_funcionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tiene_funciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 80
                self.funcs()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._complemento_vars = None # Complemento_varsContext

        def VARS(self):
            return self.getToken(PatitoParserParser.VARS, 0)

        def complemento_vars(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParserParser.Complemento_varsContext)
            else:
                return self.getTypedRuleContext(PatitoParserParser.Complemento_varsContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParserParser.SEMI)
            else:
                return self.getToken(PatitoParserParser.SEMI, i)

        def getRuleIndex(self):
            return PatitoParserParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = PatitoParserParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(PatitoParserParser.VARS)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                localctx._complemento_vars = self.complemento_vars()

                partes = (None if localctx._complemento_vars is None else self._input.getText(localctx._complemento_vars.start,localctx._complemento_vars.stop)).split(":")  
                variables_separadas = partes[0].split(",")
                tipo = partes[1]

                for variable in variables_separadas: 
                    if tipo == "entero":
                        direccion = self.contadorenteroglobal
                        self.funcdir.funciones[self.nombrefuncion]["tabla"].add_var(variable,tipo,direccion)
                        self.contadorenteroglobal = self.contadorenteroglobal + 1
                    elif tipo == "flotante":
                        direccion = self.contadorflotanteglobal
                        self.funcdir.funciones[self.nombrefuncion]["tabla"].add_var(variable,tipo,direccion)
                        self.contadorflotante = self.contadorflotanteglobal + 1
                    else:
                        raise ValueError(f"Variable no identificada")

                self.state = 89
                self.match(PatitoParserParser.SEMI)
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complemento_varsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParserParser.ID)
            else:
                return self.getToken(PatitoParserParser.ID, i)

        def COLON(self):
            return self.getToken(PatitoParserParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(PatitoParserParser.TipoContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParserParser.COMMA)
            else:
                return self.getToken(PatitoParserParser.COMMA, i)

        def getRuleIndex(self):
            return PatitoParserParser.RULE_complemento_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplemento_vars" ):
                listener.enterComplemento_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplemento_vars" ):
                listener.exitComplemento_vars(self)




    def complemento_vars(self):

        localctx = PatitoParserParser.Complemento_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_complemento_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(PatitoParserParser.ID)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 96
                self.match(PatitoParserParser.COMMA)
                self.state = 97
                self.match(PatitoParserParser.ID)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(PatitoParserParser.COLON)
            self.state = 104
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(PatitoParserParser.ENTERO, 0)

        def FLOTANTE(self):
            return self.getToken(PatitoParserParser.FLOTANTE, 0)

        def getRuleIndex(self):
            return PatitoParserParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = PatitoParserParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self._complemento_funcs = None # Complemento_funcsContext

        def NULA(self):
            return self.getToken(PatitoParserParser.NULA, 0)

        def ID(self):
            return self.getToken(PatitoParserParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PatitoParserParser.LPAREN, 0)

        def complemento_funcs(self):
            return self.getTypedRuleContext(PatitoParserParser.Complemento_funcsContext,0)


        def RPAREN(self):
            return self.getToken(PatitoParserParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(PatitoParserParser.LBRACE, 0)

        def tiene_variables(self):
            return self.getTypedRuleContext(PatitoParserParser.Tiene_variablesContext,0)


        def cuerpo(self):
            return self.getTypedRuleContext(PatitoParserParser.CuerpoContext,0)


        def RBRACE(self):
            return self.getToken(PatitoParserParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(PatitoParserParser.SEMI, 0)

        def getRuleIndex(self):
            return PatitoParserParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = PatitoParserParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(PatitoParserParser.NULA)
            self.state = 109
            localctx._ID = self.match(PatitoParserParser.ID)

            self.nombrefuncion = (None if localctx._ID is None else localctx._ID.text)
            self.funcdir.add_funcion((None if localctx._ID is None else localctx._ID.text),"nula")

            self.state = 111
            self.match(PatitoParserParser.LPAREN)
            self.state = 112
            localctx._complemento_funcs = self.complemento_funcs()

            argumentos = (None if localctx._complemento_funcs is None else self._input.getText(localctx._complemento_funcs.start,localctx._complemento_funcs.stop)).split(",")  
            for argumento in argumentos: 
                arg_div = argumento.split(":")
                variable = arg_div[0]
                tipo = arg_div[1]
                if tipo == "entero":
                    direccion = self.contadorenterolocal
                    self.funcdir.funciones[self.nombrefuncion]["tabla"].add_var(variable,tipo,direccion)
                    self.contadorenterolocal = self.contadorenterolocal + 1
                elif tipo == "flotante":
                    direccion = self.contadorflotantelocal
                    self.funcdir.funciones[self.nombrefuncion]["tabla"].add_var(variable,tipo,direccion)
                    self.contadorflotantelocal = self.contadorflotantelocal + 1
                else:
                    raise ValueError(f"Variable no identificada")

            self.state = 114
            self.match(PatitoParserParser.RPAREN)
            self.state = 115
            self.match(PatitoParserParser.LBRACE)
            self.state = 116
            self.tiene_variables()
            self.state = 117
            self.cuerpo()
            self.state = 118
            self.match(PatitoParserParser.RBRACE)
            self.state = 119
            self.match(PatitoParserParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complemento_funcsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParserParser.ID, 0)

        def COLON(self):
            return self.getToken(PatitoParserParser.COLON, 0)

        def tipo(self):
            return self.getTypedRuleContext(PatitoParserParser.TipoContext,0)


        def COMMA(self):
            return self.getToken(PatitoParserParser.COMMA, 0)

        def complemento_funcs(self):
            return self.getTypedRuleContext(PatitoParserParser.Complemento_funcsContext,0)


        def getRuleIndex(self):
            return PatitoParserParser.RULE_complemento_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplemento_funcs" ):
                listener.enterComplemento_funcs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplemento_funcs" ):
                listener.exitComplemento_funcs(self)




    def complemento_funcs(self):

        localctx = PatitoParserParser.Complemento_funcsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_complemento_funcs)
        self._la = 0 # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 121
                    self.match(PatitoParserParser.ID)
                    self.state = 122
                    self.match(PatitoParserParser.COLON)
                    self.state = 123
                    self.tipo()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 126
                    self.match(PatitoParserParser.ID)
                    self.state = 127
                    self.match(PatitoParserParser.COLON)
                    self.state = 128
                    self.tipo()
                    self.state = 129
                    self.match(PatitoParserParser.COMMA)
                    self.state = 130
                    self.complemento_funcs()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PatitoParserParser.LBRACE, 0)

        def tiene_estatuto(self):
            return self.getTypedRuleContext(PatitoParserParser.Tiene_estatutoContext,0)


        def RBRACE(self):
            return self.getToken(PatitoParserParser.RBRACE, 0)

        def getRuleIndex(self):
            return PatitoParserParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)



